Migration to JDK 9 and JUnit 5